# fastapi-pydantic-ai-example

./: .env.example  LICENSE  README.md  ai_service.py  config.py  main.py  models.py  pyproject.toml
pydantic-ai-bruno-collection/: AI request.bru  bruno.json  collection.bru
pydantic-ai-bruno-collection/environments/: local-env.bru
